# agex-cli

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.github/workflows/: build.yml  docs.yml  publish.yml  test.yml
docs/: _config.yml  index.md  skill-sources.md
docs/_includes/: head_custom.html
docs/commands/: explain.md  gamify.md  hook.md  index.md  learn.md  overview.md
docs/superpowers/plans/: 2026-04-18-agex-v0.1.md  2026-05-10-agex-pr.md
docs/superpowers/specs/: 2026-04-18-agex-design.md  2026-04-26-agex-doctor.md  2026-05-10-agex-pr-design.md
scripts/: sync_skill_md.py
src/agent_experience/: __init__.py  cli.py
src/agent_experience/backends/acp/: probe.py
src/agent_experience/backends/capabilities/: codex.yaml  copilot.yaml
src/agent_experience/backends/claude_code/: probe.py
src/agent_experience/backends/codex/: probe.py
src/agent_experience/backends/copilot/: probe.py
src/agent_experience/commands/doctor/: SKILL.md
src/agent_experience/commands/doctor/assets/: report.md.j2
src/agent_experience/commands/doctor/references/: design.md
src/agent_experience/commands/doctor/scripts/: doctor.py
src/agent_experience/commands/explain/: SKILL.md
src/agent_experience/commands/explain/scripts/: explain.py
src/agent_experience/commands/gamify/: SKILL.md
src/agent_experience/commands/gamify/scripts/: install.py
src/agent_experience/commands/hook/: SKILL.md
src/agent_experience/commands/hook/assets/: table.md.j2
src/agent_experience/commands/hook/scripts/: read.py  write.py
src/agent_experience/commands/learn/: SKILL.md
src/agent_experience/commands/overview/: SKILL.md
src/agent_experience/commands/pr/: SKILL.md
src/agent_experience/core/: backend.py  capabilities.py  config.py  github.py  hook_io.py  journal.py  paths.py  render.py  skill_loader.py
tester-agents/claude/: CLAUDE.md  README.md  culture.yaml
tester-agents/claude/.claude/: settings.json  skills
tests/: test_cli_errors.py  test_cli_smoke.py  test_skill_md_consistency.py
tests/backends/: test_claude_code_probe.py  test_stub_probes.py
tests/commands/: test_doctor.py  test_explain.py  test_gamify.py  test_hook.py  test_learn.py  test_overview.py
tests/commands/pr/: test_await.py  test_delta.py  test_footer.py  test_lint.py  test_lint_rules.py  test_open.py  test_read.py  test_reply.py
tests/commands/pr/fixtures/gh/: pr_checks_42.json  (+1 more)
tests/core/: test_backend.py  test_capabilities.py  test_config.py  test_github.py  test_hook_io.py  test_journal.py  test_paths.py  test_render.py  test_resolve_backend.py  test_skill_loader.py  test_version_lookup.py
(+35 files in other folders)
