[project]
name = "agent-experience"
version = "0.1.0"
description = "Agent-operated developer-experience CLI — deterministic per-backend markdown briefings for autonomous agents."
authors = [{name = "Ori Nachum"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tomlkit>=0.12",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "bandit>=1.7",
]

[project.scripts]
agex = "agent_experience.cli:app"

[project.urls]
Homepage = "https://agent-experience.culture.dev"
Repository = "https://github.com/OriNachum/agent-experience"
Issues = "https://github.com/OriNachum/agent-experience/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_experience"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_experience/commands" = "agent_experience/commands"
"src/agent_experience/backends" = "agent_experience/backends"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -v"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
